--- a/woof-distro/x86_64/debian/trixie64/_00build.conf
+++ b/woof-distro/x86_64/debian/trixie64/_00build.conf
@@ -8,16 +8,14 @@
 #
 
 ## packages to build from source
-PETBUILDS="busybox aaa_pup_c dmz-cursor-theme geany gexec gtkdialog gtk_theme_flat_grey_rounded gtk_theme_polished_blue gtk_theme_gradient_grey gtk_theme_buntoo_ambience gtk_theme_stark_blueish lxtask mtpaint xcur2png xdelta Xdialog yad pmaterial_icons puppy_standard_icons puppy_flat_icons connman-puppy ram-saver fixmenusd spot-pkexec notification-daemon-stub"
+PETBUILDS="aaa_pup_c gexec gtkdialog Xdialog yad connman-puppy ram-saver fixmenusd spot-pkexec swaylock swayidle chayang spacefm mdview"
 [ "$DISTRO_TARGETARCH" = "x86_64" ] && PETBUILDS="$PETBUILDS efilinux"
-PETBUILDS="$PETBUILDS deadbeef gmeasures fpm2 xpad ExpenseTracker hardinfo gfnrename fsearch mdview wly-colpick"
-PETBUILDS="$PETBUILDS swaylock swayidle chayang spacefm epdfview"
 if [ "$DISTRO_VARIANT" = "dwl" ]; then
     PETBUILDS="$PETBUILDS dwl foot-puppy yambar-dwl"
 else
     PETBUILDS="$PETBUILDS labwc-puppy xdg-puppy-labwc lxterminal-puppy"
 fi
-PETBUILDS="$PETBUILDS gplaces"
+[ "$DISTRO_VARIANT" != "barebones" ] && PETBUILDS="$PETBUILDS notification-daemon-stub geany mtpaint epdfview deadbeef gmeasures fpm2 xpad ExpenseTracker hardinfo gfnrename fsearch wly-colpick gplaces"
 
 ## compression method to be used (SFS files)
 #SFSCOMP='-comp xz -Xbcj x86 -b 512K'
