--- a/woof-code/rootfs-skeleton/usr/share/applications/screenshot.desktop
+++ b/woof-code/rootfs-skeleton/usr/share/applications/screenshot.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=Screenshot
 Icon=camera-photo-symbolic
-Exec=mtpaint-screenshot
+Exec=screenshot
 Terminal=false
 Type=Application
-Categories=RasterGraphics;
+Categories=Utility;
